--- a/app.yaml
+++ b/app.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 runtime: python38
+entrypoint: gunicorn -b :$PORT main:app
 
 handlers:
   # This configures Google App Engine to serve the files in the app's static
